<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/change_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:onClick="onChangePhotoClicked"
                android:text="@string/change_text" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name_hint"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="80dp"
                android:layout_height="50dp"/>

            <RadioButton
                android:id="@+id/radioButtonM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_option" />

            <Space
                android:layout_width="100dp"
                android:layout_height="50dp"/>

            <RadioButton
                android:id="@+id/radioButtonF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_option" />
        </RadioGroup>


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/email_prompt"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_prompt"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/phone_number"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/edit_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/major_text"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/edit_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/class_number"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>